--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6e178e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================\n",
+      "LOADING INDICES FROM DISK\n",
+      "To recompute set `force_index_recompute=True` in config.py\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from lhotse import (SupervisionSegment, MonoCut, Fbank, LilcomFilesWriter, \n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "55e1c713",
    "metadata": {},
    "outputs": [
@@ -324,24 +335,23 @@
        "19   chan0      1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the sample table with laughter and non-laughter segments \n",
+    "# Load the sample dataframe with laughter and non-laughter segments \n",
     "# These are all laughter from chan0 in meeting 'Bmr021' (label 1)\n",
     "# There is one corresponding non-laughter segment for each laughter segment - \n",
     "# this might be from a different channel though as explained in the thesis.\n",
-    "# The table will be called dataframe in the following - this is the standard term used by the pandas library\n",
     "df = pd.read_csv('data/icsi/data_dfs/samples/sample_df.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d5b0ae13",
    "metadata": {},
    "outputs": [],
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0d9d237c",
    "metadata": {},
    "outputs": [
@@ -372,7 +382,7 @@
        "Name: 10, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "266fda5c",
    "metadata": {},
    "outputs": [
@@ -403,7 +413,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "01cc7040",
    "metadata": {},
    "outputs": [],
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "3d75e40a",
    "metadata": {},
    "outputs": [
@@ -443,7 +453,7 @@
        "MonoCut(id='sample-laugh', start=291.39, duration=1.0, channel=0, supervisions=[], features=None, recording=Recording(id='Bmr021_c0', sources=[AudioSource(type='file', channels=[0], source='data/samples/Bmr021_c0.sph')], sampling_rate=16000, num_samples=35391062, duration=2211.941375, transforms=None), custom=None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8d4cc67c",
    "metadata": {
     "scrolled": false
@@ -476,7 +486,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -509,12 +519,12 @@
     "laugh_cut = laugh_cut.compute_and_store_features(extractor, storage=LilcomFilesWriter('.demo-feats'))\n",
     "laugh_cut.plot_audio()\n",
     "laugh_cut.plot_features()\n",
-    "laugh_cut.play_audio()"
+    "laugh_cut.play_audio() # note that audio is automatically normalised"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2a294fac",
    "metadata": {},
    "outputs": [
@@ -524,7 +534,7 @@
        "MonoCut(id='sample-laugh', start=1478.92, duration=1.0, channel=0, supervisions=[], features=None, recording=Recording(id='Bmr021_c0', sources=[AudioSource(type='file', channels=[0], source='data/samples/Bmr021_c0.sph')], sampling_rate=16000, num_samples=35391062, duration=2211.941375, transforms=None), custom=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d6e54df9",
    "metadata": {},
    "outputs": [
@@ -555,7 +565,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -588,7 +598,7 @@
     "non_laugh_cut = non_laugh_cut.compute_and_store_features(extractor, storage=LilcomFilesWriter('.demo-feats'))\n",
     "non_laugh_cut.plot_audio()\n",
     "non_laugh_cut.plot_features()\n",
-    "non_laugh_cut.play_audio()"
+    "non_laugh_cut.play_audio() # note that audio is automatically normalised"
    ]
   }
  ],
